# ED2021.3-1

./: CMakeLists.txt  README.md
src/: ArvoreB.cpp  ArvoreB.h  Leitura.cpp  Leitura.h  Timer.cpp  Timer.h  arvoreVP.cpp  arvoreVP.h  main.cpp  moduloArvoreVP.h  moduloTeste.cpp  noVP.h  ordenacao.cpp  ordenacao.h  tabelaHash.cpp  tabelaHash.h
